Adding Kind Commplition & Simplifying Imports

--- a/fish/Makefile
+++ b/fish/Makefile
@@ -1,7 +1,9 @@
 up:
 	ln ./config.fish ~/.config/fish
 	cp -r ./functions ~/.config/fish/
+	cp -r ./completions ~/.config/fish/
 clean:
 	unlink ~/.config/fish/config.fish
 	rm -r ~/.config/fish/functions
+	rm -r ~/.config/fish/completions
 update: clean up
